# unified-mcp-server

./: .gitignore  LISENSE  Makefile  README.md  api.md  docker-compose.yml  dockerfile  http_speaking_mcp_protocol.py  install.md  llm.py  pyproject.toml  pytest.ini  real-pyproject.toml  setup.py  simple_client.py  simple_client_v2.py  sssssssssssss.txt  unified_server_guide.md  use_a_jrpc_based_client.py  use_api_request.py
examples/: advanced_example.py  basic_example.py
src/: data.txt  tool_server.py
src/unified_server/: __init__.py  __main__.py
src/unified_server/core/: __init__.py  config.py  registry.py  server.py
src/unified_server/decorators/: __init__.py  prompt.py  resource.py  resource_template.py  tool.py
src/unified_server/handlers/: __init__.py  mcp_handlers.py
src/unified_server/routes/: __init__.py  api.py  base.py  mcp.py  prompts.py  resources.py  tools.py
src/unified_server/utils/: __init__.py  inspection.py  logging.py
tests/: __init__.py  test_mcp.py  test_resources.py  test_tools.py
